src/lexer/snapshots/python_lsp__lexer__tests__lex_indentation_windows_eol.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "def" Keyword(Def) 0..3,
    "foo" Id 4..7,
    "(" OpenParenthesis 7..8,
    ")" CloseParenthesis 8..9,
    ":" Colon 9..10,
    "\r\n" NewLine 10..12,
    "   " Indent 12..15,
    "return" Keyword(Return) 15..21,
    "99" Number(Decimal) 22..24,
    "\r\n" NewLine 24..26,
    "\r\n" NonLogicalNewline 26..28,
    "" Dedent 28..28,
]
