src/lexer/snapshots/python_lsp__lexer__tests__lex_line_comment_long.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "99232" Number(Decimal) 0..5,
    "# foo" Comment 7..12,
    "" NewLine 12..12,
]
