src/lexer/snapshots/python_lsp__lexer__tests__lex_line_comment_single_whitespace.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "99232" Number(Decimal) 0..5,
    "# " Comment 7..9,
    "" NewLine 9..9,
]
