src/lexer/snapshots/python_lsp__lexer__tests__lex_line_comment_whitespace.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "99232" Number(Decimal) 0..5,
    "#  " Comment 7..10,
    "" NewLine 10..10,
]
