src/lexer/snapshots/python_lsp__lexer__tests__lex_logical_newline_line_comment.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "#Hello" Comment 0..6,
    "\n" NonLogicalNewline 6..7,
    "#World" Comment 7..13,
    "\n" NonLogicalNewline 13..14,
]
