src/lexer/snapshots/python_lsp__lexer__tests__lex_newline_in_brackets_unix_eol.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "x" Id 0..1,
    "=" Operator(Assign) 2..3,
    "[" OpenBracket 4..5,
    "\n" NonLogicalNewline 5..6,
    "\n" NonLogicalNewline 6..7,
    "1" Number(Decimal) 15..16,
    "," Comma 16..17,
    "2" Number(Decimal) 17..18,
    "\n" NonLogicalNewline 18..19,
    "," Comma 23..24,
    "(" OpenParenthesis 24..25,
    "3" Number(Decimal) 25..26,
    "," Comma 26..27,
    "\n" NonLogicalNewline 27..28,
    "4" Number(Decimal) 32..33,
    "," Comma 33..34,
    "\n" NonLogicalNewline 34..35,
    ")" CloseParenthesis 39..40,
    "," Comma 40..41,
    "{" OpenBrace 42..43,
    "\n" NonLogicalNewline 43..44,
    "5" Number(Decimal) 48..49,
    "," Comma 49..50,
    "\n" NonLogicalNewline 50..51,
    "6" Number(Decimal) 55..56,
    "," Comma 56..57,
    "7" Number(Decimal) 63..64,
    "}" CloseBrace 64..65,
    "]" CloseBracket 65..66,
    "\n" NewLine 66..67,
]
